tests/import/resolution_scope/negative_nested_scope_validation/dep_collision_bad.ott
import base :: 'base.ott' ::=
  | tm

grammar
tm :: 'LocalTm_' ::=
  | 'd' :: :: local
